[package]
name = "libkcmdline"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"
description = "Linux kernel command line parameter validation"
repository = "https://github.com/bmr-cymru/libkcmdline"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
regex = "1.0"
thiserror = "1.0"
nom = "7.0"
indexmap = "2.0"

[dev-dependencies]
proptest = "1.0"
criterion = "0.5"

[build-dependencies]
walkdir = "2.0"
toml = "0.8"

[[bin]]
name = "kcmdline-validate"
path = "src/bin/validate.rs"

[features]
default = ["hardware-probe"]
hardware-probe = []  # Enable hardware detection
